refactor: Landing block related chat messages